src/dotnet/UI.Blazor/Components/Button/button.css
.btn {
    @apply transition duration-150 ease-in-out outline-none inline-flex justify-center;
    @apply py-1 px-3 fill-current rounded-md border;
    @apply min-w-32 md:min-w-24 max-w-full md:max-w-max;
    @apply text-xl md:text-lg font-normal md:font-normal;
    @apply h-12 md:h-10 min-h-12 md:min-h-10;
    @apply whitespace-nowrap;
    @apply select-none;
}
.btn .btn-content {
    @apply flex flex-row self-center;
}

.btn:disabled,
.btn.disabled {
    @apply opacity-70;
}
.btn.-disabled:disabled,
.btn.-disabled.disabled {
    @apply opacity-100;
}

/* Primary */
.btn.btn-primary {
    @apply bg-primary border-primary text-primary-title;
}
.btn.btn-primary:hover,
.btn.btn-primary:focus {
    @apply bg-primary-hover border-primary-hover;
}
.btn.btn-primary:active,
.btn.btn-primary:focus:active {
    @apply bg-primary border-primary;
}
.btn.btn-primary:disabled,
.btn.btn-primary.disabled,
.btn.btn-secondary:disabled,
.btn.btn-secondary.disabled {
    @apply bg-disabled text-primary-title border-disabled;
}

/* Secondary */
.btn.btn-secondary,
.btn.btn-secondary:active,
.btn.btn-secondary:focus:active {
    @apply bg-secondary border-secondary text-secondary-title;
}
.btn.btn-secondary:hover,
.btn.btn-secondary:focus {
    @apply bg-secondary-hover border-secondary-hover;
}

/* Outline */
.btn.btn-outline,
.btn.btn-outline:active,
.btn.btn-outline:focus:active {
    @apply bg-outline border-primary text-outline-title;
}
.btn.btn-outline:hover,
.btn.btn-outline:focus:hover {
    @apply bg-secondary-hover border-primary;
}
.btn.btn-outline:disabled,
.btn.btn-outline.disabled {
    @apply bg-outline border-disabled text-disabled;
}

/* Error */
.btn.btn-error {
    @apply bg-error border-error text-error-title;
}
.btn.btn-error:hover,
.btn.btn-error:focus:hover {
    @apply bg-error-hover border-error-hover text-error;
}
.btn.btn-error:active,
.btn.btn-error:focus:active {
    @apply outline-none ring-2 ring-error-ring bg-error border-error-ring;
}
.btn.btn-error:focus {
    @apply outline-none ring-1 ring-error-ring bg-error border-error-ring;
}

/* Error outline */
.btn.btn-error-outline {
    @apply bg-01 border-error text-error-outline-title;
}
.btn.btn-error-outline:hover,
.btn.btn-error-outline:focus:hover {
    @apply bg-error-outline-hover border-error-hover;
}
.btn.btn-error-outline:active,
.btn.btn-error-outline:focus:active {
    @apply outline-none ring-2 ring-error-ring bg-01 border-error-ring;
}
.btn.btn-error-outline:focus {
    @apply outline-none ring-1 ring-error-ring bg-01 border-error-ring;
}

.btn.btn-text {
    @apply bg-transparent border-transparent font-semibold text-02;
}
.btn.btn-text:hover,
.btn.btn-text:focus:hover {
    @apply bg-04 border-bg-03;
}
.btn.btn-text:active,
.btn.btn-text:focus:active {
    @apply outline-none ring-2 ring-bg-04 bg-transparent border-bg-03;
}
.btn.btn-text:focus {
    @apply outline-none ring-2 ring-bg-04 bg-transparent border-bg-03;
}

.btn.btn-transparent {
    @apply relative flex border-0 rounded-none min-w-0 m-0 p-0 text-base h-min;
    @apply hover:cursor-pointer;
}

.btn.btn-xs {
    @apply text-base md:text-base;
    @apply h-8 md:h-6 min-h-8 md:min-h-6;
    @apply min-w-0 md:min-w-16;
}
.btn.btn-sm {
    @apply text-lg md:text-base;
    @apply h-10 md:h-8 min-h-10 md:min-h-8;
    @apply min-w-0 md:min-w-20;
}
.btn.btn-lg {
    @apply text-2xl md:text-xl;
    @apply h-16 md:h-12 min-h-16 md:min-h-12;
    @apply min-w-0 md:min-w-28;
}

.btn.btn-square {
    @apply inline-block overflow-hidden;
    @apply p-0 mx-0 min-w-0 h-full min-h-0;
    @apply border-0;
    @apply text-base font-semibold text-icons-01;
}
.btn.btn-square:disabled,
.btn.btn-square.disabled {
    @apply opacity-70;
}
.btn.btn-square.-disabled:disabled,
.btn.btn-square.-disabled.disabled {
    @apply opacity-100;
}
.btn.btn-square .btn-content {
    @apply flex-none flex-x w-full h-full;
}
.btn.btn-square:focus > .btn-content {
    @apply bg-square-focus rounded-sm;
}
.btn.btn-square:active > .btn-content {
    @apply bg-square-active;
}
.btn.btn-square:hover > .btn-content {
    @apply bg-square-hover;
}
.btn.btn-square.show-on-hover {
    @apply invisible z-10 absolute;
}
.btn.btn-square .btn-content-inner {
    @apply p-1 self-center;
}

/*Button Round*/
.btn.btn-round {
    @apply flex overflow-hidden;
    @apply p-0 mx-0 min-w-0 h-full min-h-0;
    @apply border-0 bg-transparent;
    @apply text-base text-icons-01;
    @apply rounded-full w-fit h-fit self-center;
}
.btn.btn-round:disabled,
.btn.btn-round.disabled {
    @apply opacity-70;
}
.btn.btn-round.-disabled:disabled,
.btn.btn-round.-disabled.disabled {
    @apply opacity-100;
}
.btn.btn-round .btn-content {
    @apply bg-round min-h-12 min-w-12 max-h-12 max-w-12 items-center justify-center;
}
.btn.btn-round.transparent .btn-content {
    @apply bg-transparent min-h-12 min-w-12 max-h-12 max-w-12 items-center justify-center;
}
.btn.btn-round.primary-icon .btn-content {
    @apply text-primary;
}
.btn.btn-round.hover-primary-icon .btn-content {
    @apply hover:text-primary;
}
.btn.btn-round:focus .btn-content,
.btn.btn-round.transparent:focus .btn-content,
.btn.btn-round:hover .btn-content,
.btn.btn-round.transparent:hover .btn-content,
.btn.btn-round:active .btn-content,
.btn.btn-round.transparent:active .btn-content {
    @apply bg-round-focus;
}
.btn.btn-round.blackout:hover .btn-content,
.btn.btn-round.blackout:focus .btn-content,
.btn.btn-round.blackout:active .btn-content {
    @apply text-03;
}
.btn.btn-round.show-on-hover {
    @apply invisible z-10 absolute;
}
.btn.btn-round .btn-content-inner {
    @apply p-1 self-center;
}

/*Default horizontal*/
.btn-group {
    @apply flex flex-row gap-x-4;
    @apply max-w-none md:max-w-fit w-full md:w-auto;
}
.btn-group .btn {
    @apply flex-1;
    @apply min-w-0 md:min-w-24;
    @apply justify-items-stretch;
}

.btn-group.vertical {
    @apply flex-col gap-y-2;
}

/* Dot */

.dot {
    @apply rounded-full ring-1 ring-dot-selected m-2.5;
}
.dot-dot {
    @apply h-2 w-2 rounded-full m-0.5 bg-dot;
}
.on .dot-dot {
    @apply bg-dot-selected;
}

/* Suffixes */

button.on, .btn.on, .btn.btn-square.on, .btn.btn-round.on {
    @apply text-primary;
}
button.off, .btn.off, .btn.btn-square.off, .btn.btn-round.off {
    @apply text-icons-01;
}

